# PolynomialRegression

./: .gitignore  CMakeLists.txt  README.md
data/: AT1X001.csv  AT2X001.csv  AT3X001.csv
include/: LoadData.h  PolynomialRegression.h
src/: main.cpp
src/modules/: LoadData.cpp  PolynomialRegression.cpp
